rework displaying additional services also add abstract entries for saturday delivery and cash on delivery entries on example page fix for jumping to correct id in code based on https://github.com/twbs/bootstrap/issues/1768#issuecomment-46519033

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -239,3 +239,11 @@ pre {
     padding: 5px 10px;
   }
 }
+
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -75px;
+  height: 75px;
+  visibility: hidden;
+}
